# FileLoader

./: CMakeLists.txt  README.md
Client/: Client.cpp  Client.hpp  main.cpp
Protocol/: ProtocolPackage.hpp
Server/: Server.cpp  Server.hpp  Session.cpp  Session.hpp
